--- a/assets/src/back-end/scss/main.scss
+++ b/assets/src/back-end/scss/main.scss
@@ -169,11 +169,6 @@
     top: 12px;
     right: -5px;
 }
-
-.wps-form-group.wps_rma_pro_class_wrap,.wps-form-group.wps_rma_pro_class_wrap * {
-    pointer-events: none;
-}
-
 .wps_rma_pro_class_wrap .wps-form-group__control {
     position: relative;
 }
@@ -845,15 +840,6 @@
       right: -5px;
       top: 12px
   }
-  
-  
-  .wps-form-group.wps_rma_pro_class_wrap,
-  .wps-form-group.wps_rma_pro_class_wrap *,
-  #wps_ship_setting.wps_rma_pro_div .wps__enable-shipping *,
-  .wps_rma_pro_div * {
-      pointer-events: none
-  }
-  
   #wps_ship_setting.wps_rma_pro_div .wps__enable-shipping td,
   .wps_rma_pro_class_wrap .wps-form-group__control,
   .wps_rma_pro_div .wps_rma_shipping_label_setting td {
@@ -913,7 +899,7 @@
   .wps_rma_pro_div .wps_rma_shiprocket_setting label:before {
       align-items: center;
       background: #0aa000;
-      bottom: 0;
+      bottom: 4px;
       color: #fff;
       content: "PRO";
       display: inline-flex;
@@ -1144,10 +1130,6 @@
       }
   }
 
-  a.wps_rma_pro_div{
-    pointer-events:none;
-  }
-
   /* Pro link adding start */
 
 .wps-header-container .wps-header-title {
@@ -1176,3 +1158,98 @@
 }
 
 /* Pro link adding end */
+
+/* Pro Popup start */
+
+#wps_ship_setting.wps_rma_pro_div .wps__enable-shipping td,
+.wps_rma_pro_class_wrap .wps-form-group__control,
+.wps_rma_pro_div .wps_rma_shipping_label_setting td {
+    visibility: hidden;
+}
+
+#wps_ship_setting.wps_rma_pro_div .wps__enable-shipping td:before,
+.wps_rma_pro_class_wrap .wps-form-group__control:before,
+.wps_rma_pro_div .wps_rma_shipping_label_setting td:before {
+    visibility: visible;
+}
+
+.wps-rma__popup-for-pro-shadow {
+    background: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 99998;
+    display: none;
+}
+
+span.wps-rma__popup-for-pro-close {
+    display: inline-block;
+    line-height: 14px;
+    font-size: 24px;
+    font-weight: 400;
+    transform: rotate(45deg);
+    padding: 10px;
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    cursor: pointer;
+}
+
+.wps-rma__popup-for-pro {
+    background: #fff;
+    border-radius: 8px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    padding: 32px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    z-index: 99999;
+    transform: translate(-50%, -50%) scale(0);
+    width: 90%;
+    max-width: 600px;
+    opacity: 0;
+    transition: transform 0.8s ease;
+}
+
+.wps-rma__popup-for-pro.active-pro {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
+}
+
+h2.wps-rma__popup-for-pro-title {
+    font-size: 32px;
+    line-height: 1.25;
+    margin: 0 0 15px;
+    text-align: center;
+}
+
+p.wps-rma__popup-for-pro-content {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5;
+    margin: 0 0 50px;
+    text-align: center;
+}
+
+.wps-rma__popup-for-pro-link-wrap {
+    text-align: center;
+}
+
+a.wps-rma__popup-for-pro-link {
+    font-size: 16px;
+    font-weight: 400;
+    color: #fff;
+    background: #0aa000;
+    border: 1px solid #0aa000;
+    display: inline-block;
+    padding: 12px 28px;
+    border-radius: 50px;
+    transition: all 0.4s;
+}
+
+a.wps-rma__popup-for-pro-link:hover {
+    color: #0aa000;
+    background: transparent;
+}
