--- a/assets/src/front-end/scss/main.scss
+++ b/assets/src/front-end/scss/main.scss
@@ -689,6 +689,6 @@ div.wps_order_msg_single_attachment a .wps_order_msg_attachment_thumbnail{
 
 }
 
-.theme-betheme .button.wps_rma_cancel_order,.theme-betheme .woocommerce-orders-table__cell-order-actions .exchange,.theme-betheme .woocommerce-orders-table__cell-order-actions .return,.theme-betheme .woocommerce-orders-table__cell-order-actions .view_msg{
+.theme-betheme .woocommerce-orders-table__cell-order-actions .button.wps_rma_cancel_order,.theme-betheme .woocommerce-orders-table__cell-order-actions .exchange,.theme-betheme .woocommerce-orders-table__cell-order-actions .return,.theme-betheme .woocommerce-orders-table__cell-order-actions .view_msg{
    margin-left: 5px !important ;
 }
