--- a/public/css/woo-refund-and-exchange-lite-public.css
+++ b/public/css/woo-refund-and-exchange-lite-public.css
@@ -709,7 +709,7 @@ div.wps_order_msg_single_attachment a .wps_order_msg_attachment_thumbnail {
   float: unset !important;
 }
 
-.theme-betheme .button.wps_rma_cancel_order, .theme-betheme .woocommerce-orders-table__cell-order-actions .exchange, .theme-betheme .woocommerce-orders-table__cell-order-actions .return, .theme-betheme .woocommerce-orders-table__cell-order-actions .view_msg {
+.theme-betheme .woocommerce-orders-table__cell-order-actions .button.wps_rma_cancel_order, .theme-betheme .woocommerce-orders-table__cell-order-actions .exchange, .theme-betheme .woocommerce-orders-table__cell-order-actions .return, .theme-betheme .woocommerce-orders-table__cell-order-actions .view_msg {
   margin-left: 5px !important;
 }
 
