--- a/public/css/woo-refund-and-exchange-lite-public.css
+++ b/public/css/woo-refund-and-exchange-lite-public.css
@@ -149,10 +149,6 @@
   width: 100%;
 }
 
-.wps-rma-form__wrapper.wps-rma-form__wrapper {
-  border: 1px solid #333333;
-}
-
 .wps-rma-form__wrapper .wps-rma-form__header {
   background-color: #333333;
 }
@@ -241,6 +237,10 @@ table.wps-rma-product__table:not(.has-background) tbody tr:nth-child(2n) td, tab
 
 .wps-rma-form__wrapper td.product-total {
   text-align: center;
+}
+
+.wps_rma_return_request_morefiles {
+  margin-top: 20px;
 }
 
 /* View Order Messages */
@@ -507,6 +507,212 @@ div.wps_order_msg_single_attachment a .wps_order_msg_attachment_thumbnail {
   color: red;
 }
 
+/* Layout enhancement of RMA start */
+.wps_rma_outer_wrap_info {
+  margin: 20px 0 0;
+}
+
+.wps_rma_outer_wrap_info ul.wps_rma_ul_wrap_info li {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.wps_rma_outer_wrap_info .wps_rma_ul_wrap_info {
+  margin: 0;
+  padding: 20px 20px 0 !important;
+  display: flex;
+  align-items: center;
+  background: #eee;
+  border-radius: 8px 8px 0 0;
+  cursor: pointer;
+  border: 1px solid #4b4b4b;
+  border-bottom: none;
+  width: 100%;
+}
+
+.wps_rma_ul_wrap_info .wps_rma_li_wrap_info h2 {
+  font-size: 18px;
+  font-weight: 400;
+  padding: 6px 20px;
+  background: transparent;
+  border-radius: 10px 10px 0 0;
+  margin: 0;
+  transition: all 0.3s;
+}
+
+.wps_rma_ul_wrap_info .wps_rma_li_wrap_info.active h2 {
+  background: #fff;
+}
+
+.wps_rma_refund_info_wrap,
+.wps_rma_exchange_info_wrap {
+  padding: 20px 15px;
+  border: 1px solid #4b4b4b;
+  border-top: none;
+  border-radius: 0 0 8px 8px;
+}
+
+.wps_rma_refund_info_wrap,
+.wps_rma_exchange_info_wrap {
+  display: none;
+  opacity: 0;
+  transition: opacity 0.6s;
+}
+
+.wps_rma_refund_info_wrap.active-tab,
+.wps_rma_exchange_info_wrap.active-tab {
+  display: block;
+  opacity: 1;
+}
+
+.wps_rma_outer_wrap_info .wps_rma_ret_ex_info_wrap h2 {
+  margin: 0 0 20px;
+  font-size: 24px;
+  line-height: 1.25;
+}
+
+/* Table start */
+.wps_rma_outer_wrap_info input.btn {
+  margin-right: 10px;
+  min-height: 30px;
+}
+
+.wps_rma_outer_wrap_info .wps_rma_ret_ex_info_wrap table {
+  width: 100%;
+  margin: 0 0 20px;
+}
+
+.wps_rma_outer_wrap_info div.wps_rma_ret_ex_info_wrap table,
+.wps_rma_outer_wrap_info div.wps_rma_ret_ex_info_wrap table * {
+  background: transparent;
+  border: none;
+  padding: 0;
+  border-collapse: collapse;
+}
+
+.wps_rma_outer_wrap_info .wps_rma_ret_ex_info_wrap table thead th,
+.wps_rma_outer_wrap_info .wps_rma_ret_ex_info_wrap table tbody th {
+  padding: 8px;
+  background: #eee;
+  text-align: left;
+}
+
+.wps_rma_outer_wrap_info .wps_rma_ret_ex_info_wrap table thead th:nth-of-type(1) {
+  border-radius: 8px 0 0 0;
+}
+
+.wps_rma_outer_wrap_info .wps_rma_ret_ex_info_wrap table thead th:last-of-type {
+  border-radius: 0 8px 0 0;
+}
+
+.wps_rma_outer_wrap_info .wps_rma_ret_ex_info_wrap table tbody td {
+  border-bottom: 1px solid #4b4b4b;
+  padding: 8px;
+  text-align: left;
+}
+
+.wps_rma_outer_wrap_info .wps_rma_ret_ex_info_wrap table tbody tr:last-of-type th:nth-of-type(1) {
+  border-radius: 0 0 0 8px;
+}
+
+.wps_rma_outer_wrap_info .wps_rma_ret_ex_info_wrap table tbody tr:last-of-type th:last-of-type {
+  border-radius: 0 0 8px 0;
+}
+
+.wps_rma_outer_wrap_info .wps_rma_ret_ex_info_wrap table tbody tr:nth-of-type(1) th:nth-of-type(1) {
+  border-radius: 0;
+}
+
+.wps_rma_outer_wrap_info .wps_rma_ret_ex_info_wrap table tbody tr:nth-of-type(1) th:last-of-type {
+  border-radius: 0;
+}
+
+/* Table start */
+.wps_rma_outer_wrap_info .wps_rma_ret_ex_info_wrap form,
+.wps_rma_outer_wrap_info .wps_rma_ret_ex_info_wrap form p,
+.wps-rma-form__wrapper form,
+.wps-rma-form__wrapper form p {
+  display: inline-block;
+  margin: 0;
+}
+
+/* Form start */
+.wps-rma-form__wrapper .wps-rma-form__header {
+  background: #4b4b4b;
+}
+
+.wps-rma-form__wrapper {
+  border: none;
+  padding: 10px;
+}
+
+.wps-rma-form__wrapper input.btn {
+  padding: 8px 16px;
+  min-height: 30px;
+  margin-bottom: 20px;
+}
+
+.wps-rma-form__wrapper .wps_rma_product_table_wrapper,
+.wps-rma-form__wrapper .wps_wrma_product_table_wrapper,
+.wps-rma-form__wrapper .wps_rma_customer_detail,
+.wps-rma-form__wrapper .wps_rma_product_from_submit,
+.wps-rma-form__wrapper .wps-rma-refund-request__row,
+.wps-rma-form__wrapper .wps-rma-form__row {
+  padding: 0;
+}
+
+.wps-rma-form__wrapper .wps_rma_customer_detail .woocommerce-columns {
+  display: flex;
+  gap: 20px;
+}
+
+.wps-rma-form__wrapper .wps_rma_customer_detail .woocommerce-column {
+  border: 1px solid #4b4b4b;
+  border-radius: 8px;
+  padding: 20px 32px;
+  margin: 0 !important;
+  flex: 1;
+}
+/* Form end */
+/* Special for Avada start */
+.theme-Avada .wps_rma_outer_wrap_info .wps_rma_ret_ex_info_wrap h2 {
+  font-size: 24px !important;
+  border-bottom: none !important;
+}
+
+.theme-Avada .wps_rma_ul_wrap_info .wps_rma_li_wrap_info h2 {
+  font-size: 18px !important;
+  border-bottom: none !important;
+}
+
+.theme-Avada .wps-rma-form__wrapper .wps-rma-form__heading {
+  font-size: 24px !important;
+}
+
+/* Special for Avada end */
+/* Special for 2023 theme start */
+.wps-rma-form__wrapper .wps_rma_customer_detail .woocommerce-column h2 {
+  margin: 0 0 10px;
+}
+
+.wps-rma-form__wrapper .wps_wrma_exchanged_products_wrapper table {
+  width: 100%;
+}
+
+/* Special for 2023 theme end */
+/* Layout enhancement of RMA end */
+/* multiple theme issue */
+.button[name=wps_rma_new_return_request], .button.wps_rma_view_order, input.btn.button[name=ced_new_return_request], .button.wps_rma_cancel_order, .woocommerce-orders-table__cell-order-actions .exchange, .woocommerce-orders-table__cell-order-actions .return, .woocommerce-orders-table__cell-order-actions .view_msg {
+  margin-top: 5px !important;
+  margin-right: 5px !important;
+  float: unset !important;
+}
+
+.theme-betheme .woocommerce-orders-table__cell-order-actions .button.wps_rma_cancel_order, .theme-betheme .woocommerce-orders-table__cell-order-actions .exchange, .theme-betheme .woocommerce-orders-table__cell-order-actions .return, .theme-betheme .woocommerce-orders-table__cell-order-actions .view_msg {
+  margin-left: 5px !important;
+}
+
 @media only screen and (max-width: 820px) {
   .wps-order-msg__row {
     max-width: 100%;
@@ -570,5 +776,19 @@ div.wps_order_msg_single_attachment a .wps_order_msg_attachment_thumbnail {
 @media only screen and (max-width: 375px) {
   .wps-order-msg-attachment-wrapper.wps_rma_flex {
     display: block;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .wps-rma-form__wrapper .wps_rma_customer_detail .woocommerce-columns {
+    flex-direction: column;
+  }
+
+  .wps-rma-form__wrapper .wps_rma_customer_detail .woocommerce-column {
+    padding: 20px 10px;
+  }
+
+  .wps_rma_outer_wrap_info input.btn {
+    margin-bottom: 15px !important;
   }
 }
