--- a/assets/src/front-end/scss/main.scss
+++ b/assets/src/front-end/scss/main.scss
@@ -204,7 +204,7 @@ table.wps-rma-product__table:not( .has-background ) tbody tr:nth-child(2n) td, t
     border-radius: 3px;
 }
 form#wps_order_new_msg_form{
-    margin-bottom: 40px;
+    margin-bottom: 40pxs;
 }
 .wps_rma_order_msg_wrapper .wps-order-msg-attachment-wrapper label{
 	color: #000000;
