--- a/public/css/woo-refund-and-exchange-lite-public.css
+++ b/public/css/woo-refund-and-exchange-lite-public.css
@@ -492,6 +492,7 @@ div.wps_order_msg_single_attachment a .wps_order_msg_attachment_thumbnail {
 
 .return, .view_msg {
   margin-top: 4px;
+  margin-left: 5px;
 }
 
 .wps_rma_refund_request__row {
@@ -705,8 +706,8 @@ div.wps_order_msg_single_attachment a .wps_order_msg_attachment_thumbnail {
 /* multiple theme issue */
 .button[name=wps_rma_new_return_request], .button.wps_rma_view_order, input.btn.button[name=ced_new_return_request], .button.wps_rma_cancel_order, .woocommerce-orders-table__cell-order-actions .exchange, .woocommerce-orders-table__cell-order-actions .return, .woocommerce-orders-table__cell-order-actions .view_msg {
   margin-top: 5px !important;
-  margin-right: 5px !important;
   float: unset !important;
+  margin-left: 5px !important;
 }
 
 .theme-betheme .woocommerce-orders-table__cell-order-actions .button.wps_rma_cancel_order, .theme-betheme .woocommerce-orders-table__cell-order-actions .exchange, .theme-betheme .woocommerce-orders-table__cell-order-actions .return, .theme-betheme .woocommerce-orders-table__cell-order-actions .view_msg {
