--- a/public/css/woo-refund-and-exchange-lite-public.css
+++ b/public/css/woo-refund-and-exchange-lite-public.css
@@ -492,7 +492,6 @@ div.wps_order_msg_single_attachment a .wps_order_msg_attachment_thumbnail {
 
 .return, .view_msg {
   margin-top: 4px;
-  margin-left: 5px;
 }
 
 .wps_rma_refund_request__row {
@@ -707,10 +706,21 @@ div.wps_order_msg_single_attachment a .wps_order_msg_attachment_thumbnail {
 .button[name=wps_rma_new_return_request], .button.wps_rma_view_order, input.btn.button[name=ced_new_return_request], .button.wps_rma_cancel_order, .woocommerce-orders-table__cell-order-actions .exchange, .woocommerce-orders-table__cell-order-actions .return, .woocommerce-orders-table__cell-order-actions .view_msg {
   margin-top: 5px !important;
   float: unset !important;
-  margin-left: 5px !important;
 }
 
 .theme-betheme .woocommerce-orders-table__cell-order-actions .button.wps_rma_cancel_order, .theme-betheme .woocommerce-orders-table__cell-order-actions .exchange, .theme-betheme .woocommerce-orders-table__cell-order-actions .return, .theme-betheme .woocommerce-orders-table__cell-order-actions .view_msg {
+  margin-left: 5px !important;
+}
+
+.theme-astra .woocommerce-orders-table__cell-order-actions .button.wps_rma_cancel_order, .theme-astra .woocommerce-orders-table__cell-order-actions .exchange, .theme-astra .woocommerce-orders-table__cell-order-actions .return, .theme-astra .woocommerce-orders-table__cell-order-actions .view_msg {
+  margin-left: 5px !important;
+}
+
+.theme-astra .woocommerce-orders-table__cell-order-actions .button.wps_rma_cancel_order, .theme-astra .woocommerce-orders-table__cell-order-actions .exchange, .theme-astra .woocommerce-orders-table__cell-order-actions .return, .theme-astra .woocommerce-orders-table__cell-order-actions .view_msg {
+  margin-left: 5px !important;
+}
+
+.theme-Divi .woocommerce-orders-table__cell-order-actions .exchange, .theme-Divi .woocommerce-orders-table__cell-order-actions .return, .theme-Divi .woocommerce-orders-table__cell-order-actions .view_msg {
   margin-left: 5px !important;
 }
 
