--- a/admin/css/woo-refund-and-exchange-lite-admin.css
+++ b/admin/css/woo-refund-and-exchange-lite-admin.css
@@ -1535,6 +1535,10 @@ a.wps-rma__popup-for-pro-link:hover {
   background: transparent;
 }
 
+.wps-time-form-group {
+  margin-left: 0px !important;
+}
+
 @media (max-width: 768px){
   .wps-header-container {
     justify-content: flex-start;
