--- a/assets/src/back-end/scss/main.scss
+++ b/assets/src/back-end/scss/main.scss
@@ -1253,3 +1253,6 @@ a.wps-rma__popup-for-pro-link:hover {
     color: #0aa000;
     background: transparent;
 }
+.wps-time-form-group {
+    margin-left: 0px !important;
+}
