--- a/public/css/woo-refund-and-exchange-lite-public.css
+++ b/public/css/woo-refund-and-exchange-lite-public.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* Create Color variables here
  * follow this link for Color name
  * https://chir.ag/projects/name-that-color/
@@ -725,7 +726,169 @@ div.wps_order_msg_single_attachment a .wps_order_msg_attachment_thumbnail {
   margin-left: 5px !important;
 }
 
-@media only screen and (max-width: 820px) {
+#wps_rma_template1.wps_rma_template1 {
+  border-radius: 10px;
+  padding: 20px;
+  background: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin: 0 0 20px;
+}
+
+#wps_rma_template1.wps_rma_template1 h1.wps-rma-form__heading {
+  color: #000;
+  font-weight: bold;
+  padding: 0;
+  line-height: 1.25;
+  font-size: 32px;
+  margin: 0 0 20px;
+  text-align: left;
+}
+
+#wps_rma_template1.wps_rma_template1 .wps-rma-form__header {
+  background: transparent;
+}
+
+#wps_rma_template1.wps_rma_template1 .wps_rma_customer_detail h2 {
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 1.25;
+}
+
+#wps_rma_template1.wps_rma_template1 table tbody tr:nth-of-type(even) {
+  background: #f9f9f9;
+}
+
+#wps_rma_template1.wps_rma_template1 table th,
+#wps_rma_template1.wps_rma_template1 table td {
+  border: none;
+  text-align: left;
+  vertical-align: top;
+  padding: 10px;
+  background: transparent;
+}
+
+#wps_rma_template1.wps_rma_template1 table th {
+  background: transparent;
+  border: 1px solid #e2e2e2;
+  border-left: none;
+  font-size: 16px;
+  font-weight: bold;
+  line-height: 1.25;
+}
+
+#wps_rma_template1.wps_rma_template1 table th:last-of-type {
+  border-right: none;
+}
+
+#wps_rma_template1.wps_rma_template1 table tbody tr:last-of-type th,
+#wps_rma_template1.wps_rma_template1 table tbody tr:last-of-type td {
+  border: none;
+  border-top: 1px solid #e2e2e2;
+  border-bottom: 1px solid #e2e2e2;
+  background: transparent;
+}
+
+#wps_rma_template1.wps_rma_template1 table tbody tr:last-of-type {
+  background: transparent;
+}
+
+#wps_rma_template1.wps_rma_template1 table input[type=checkbox] {
+  border-radius: 6px;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  width: 20px;
+  height: 20px;
+  border: 1px solid #c7c7c7;
+  position: relative;
+  cursor: pointer;
+}
+
+#wps_rma_template1.wps_rma_template1 table input[type=checkbox]:checked::before {
+  content: "✔";
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  color: #00a0ef;
+  font-size: 14px;
+}
+
+#wps_rma_template1.wps_rma_template1 table input[type=checkbox]:checked {
+  border-color: #00a0ef;
+}
+
+#wps_rma_template1.wps_rma_template1 table .product-quantity input[type=number],
+#wps_rma_template1.wps_rma_template1 table .wps_rma_exchange_to_product_qty {
+  border-radius: 6px;
+  max-width: 80px;
+}
+
+#wps_rma_template1.wps_rma_template1 table .product-name img {
+  border-radius: 6px;
+}
+
+#wps_rma_template1.wps_rma_template1 table input[type=checkbox]:focus {
+  outline: none;
+}
+
+#wps_rma_template1.wps_rma_template1 table td.product-total {
+  font-weight: bold;
+  color: #000;
+}
+
+#wps_rma_template1.wps_rma_template1 table th.product-check {
+  font-size: 0;
+  width: 40px;
+  min-width: 40px;
+}
+
+#wps_rma_template1.wps_rma_template1 .wps-rma-row__pd,
+#wps_rma_template1.wps_rma_template1 .wps-rma-refund-request__row {
+  gap: 40px;
+}
+
+#wps_rma_template1.wps_rma_template1 select {
+  border-radius: 6px;
+  width: 100%;
+}
+
+#wps_rma_template1.wps_rma_template1 label {
+  font-weight: bold;
+  line-height: 1.25;
+  color: #000;
+}
+
+#wps_rma_template1.wps_rma_template1 textarea {
+  border-radius: 6px;
+  color: #000;
+  line-height: 1.25;
+  max-height: 140px;
+}
+
+#wps_rma_template1.wps_rma_template1 table {
+  background: transparent;
+}
+
+#wps_rma_template1.wps_rma_template1 .button {
+  border-radius: 6px;
+  width: auto !important;
+  padding: 10px 20px;
+}
+
+#wps_rma_template1.wps_rma_template1 .wps-rma-col:last-of-type {
+  background: #f9f9f9;
+  padding: 20px;
+  border-radius: 6px;
+  color: #000;
+  border: 1px solid #c7c7c7;
+}
+
+#wps_rma_template1.wps_rma_template1 table.wps_wrma_exchanged_products th:last-of-type {
+  text-align: center;
+}
+
+@media only screen and (max-width: 820px){
   .wps-order-msg__row {
     max-width: 100%;
   }
@@ -736,7 +899,7 @@ div.wps_order_msg_single_attachment a .wps_order_msg_attachment_thumbnail {
   }
 }
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 600px){
   .wps-rma-refund-request__row {
     display: flex;
     flex-wrap: nowrap;
@@ -759,7 +922,7 @@ div.wps_order_msg_single_attachment a .wps_order_msg_attachment_thumbnail {
   }
 }
 
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 480px){
   .wps_order_msg_sub_container {
     padding: 15px;
   }
@@ -785,13 +948,13 @@ div.wps_order_msg_single_attachment a .wps_order_msg_attachment_thumbnail {
   }
 }
 
-@media only screen and (max-width: 375px) {
+@media only screen and (max-width: 375px){
   .wps-order-msg-attachment-wrapper.wps_rma_flex {
     display: block;
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 768px){
   .wps-rma-form__wrapper .wps_rma_customer_detail .woocommerce-columns {
     flex-direction: column;
   }
@@ -802,5 +965,55 @@ div.wps_order_msg_single_attachment a .wps_order_msg_attachment_thumbnail {
 
   .wps_rma_outer_wrap_info input.btn {
     margin-bottom: 15px !important;
+  }
+}
+
+@media only screen and (max-width: 580px){
+  #wps_rma_template1.wps_rma_template1 table th.product-check {
+    font-size: 16px;
+    width: auto;
+  }
+
+  #wps_rma_template1.wps_rma_template1 table th {
+    border: none;
+    border-bottom: 1px solid #c7c7c7;
+  }
+
+  #wps_rma_template1.wps_rma_template1 table tbody tr:last-of-type td {
+    border: none;
+  }
+
+  #wps_rma_template1.wps_rma_template1 table td.product-quantity,
+#wps_rma_template1.wps_rma_template1 table td.product-total {
+    text-align: right;
+  }
+
+  #wps_rma_template1.wps_rma_template1 .wps_wrma_exchanged_products tbody td {
+    text-align: right;
+  }
+
+  #wps_rma_template1.wps_rma_template1 .wps_wrma_exchanged_products .wps-rma-product__wrap {
+    border: none;
+  }
+
+  #wps_rma_template1.wps_rma_template1 .wps_wrma_exchanged_products a.remove:before {
+    display: none;
+  }
+
+  #wps_rma_template1.wps_rma_template1 table.wps_wrma_exchanged_products th:last-of-type {
+    text-align: left;
+  }
+
+  #wps_rma_template1.wps_rma_template1 table tr.wps_wrma_cancel_column td .wps_wrma_product_title p {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  #wps_rma_template1.wps_rma_template1 table tr.wps_wrma_cancel_column td .wps_wrma_product_title {
+    width: 100%;
+  }
+
+  #wps_rma_template1.wps_rma_template1 table tr.wps_wrma_cancel_column td .wps_wrma_product_title p b {
+    flex: 1;
   }
 }
