fixed-api-issues

--- a/assets/src/back-end/scss/main.scss
+++ b/assets/src/back-end/scss/main.scss
@@ -1256,3 +1256,6 @@ a.wps-rma__popup-for-pro-link:hover {
 .ui-timepicker-standard {
     z-index: 99 !important;
 }
+.wps-rma-api-container .section h2 {
+    cursor: hand;
+}
